:sparkles: add contact information

--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
         .button:hover {
             background-color: #999;
         }
+        .contact {
+            margin: 20px 0;
+            color: #555;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="message">Brandis Solutions GmbH</div>
         <div class="description">Hier entsteht eine neue Webpräsenz!</div>
+        <div class="contact">
+            <p>Email: office@brandis.solutions</p>
+            <p>Telefon: +43 664 4249572</p>
+        </div>
         <a href="impressum.html" class="button">Impressum</a>
         <a href="datenschutz.html" class="button">Datenschutz</a>
     </div>
-
-
 </body>
 </html>
