--- a/Startseite.html
+++ b/Startseite.html
@@ -30,7 +30,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Startseite.html" data-home-page-title="Startseite" data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-transparent u-xl-mode" data-lang="de"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-ff38 u-header" id="sec-f4fc"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-transparent u-xl-mode" data-lang="de"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-ff38 u-header" id="sec-f4fc"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="223" title="Startseite">
           <img src="images/LOGO_Gold1.png" class="u-logo-image u-logo-image-1">
         </a>
