--- a/Projekte.html
+++ b/Projekte.html
@@ -693,7 +693,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-75" id="sec-ec17"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1">
-          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>| Datenschtuzerklärung | <a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
+          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>| <a href="datenschutz.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Datenschutzerklärung</a> | <a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
         </p>
       </div></footer>
   
