--- a/Anhängerverleih.html
+++ b/Anhängerverleih.html
@@ -2,9 +2,9 @@
 <html style="font-size: 16px;" lang="de"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Our Mission, The Future is Here, ​Architectural Design &amp;amp; Research, Architectural Agency, About Company, Our Team, ​Building Expertise">
-    <meta name="description" content="">
-    <title>Seite 3</title>
+    <meta name="keywords" content="Anhängerverleih Niederösterreich">
+    <meta name="description" content="​Wir kaufen und vermieten Profi-Anhänger. Tieflader, Hochlader, Kippanhänger, Kofferanhänger sowie Maschinen- und Fahrzeugtransporter. Ausserdem im Sortiment: Pferdeanhänger, Kühlanhänger und Verkaufsanhänger.">
+    <title>Anhängerverleih</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Anhängerverleih.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -21,12 +21,12 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site4",
+		"name": "Impressum",
 		"logo": "images/LOGO_Gold1.png"
 }</script>
     <meta name="theme-color" content="#b39858">
-    <meta property="og:title" content="Seite 3">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Anhängerverleih">
+    <meta property="og:description" content="​Wir kaufen und vermieten Profi-Anhänger. Tieflader, Hochlader, Kippanhänger, Kofferanhänger sowie Maschinen- und Fahrzeugtransporter. Ausserdem im Sortiment: Pferdeanhänger, Kühlanhänger und Verkaufsanhänger.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="de"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-ff38 u-header" id="sec-f4fc"><div class="u-clearfix u-sheet u-sheet-1">
@@ -86,20 +86,20 @@ borders: top right bottom left !important
     <section class="u-clearfix u-custom-color-3 u-section-1" id="sec-76b0">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-custom-color-1 u-shape u-shape-rectangle u-shape-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"></div>
-        <img src="images/Untitled2.png" alt="" class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="538" data-image-height="261" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
+        <img src="images/Untitled2.png" alt="" class="custom-expanded u-image u-image-default u-image-1" data-image-width="538" data-image-height="261" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
         <div class="u-palette-3-base u-shape u-shape-rectangle u-shape-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"></div>
         <img class="u-expanded-width-xs u-image u-image-default u-image-2" data-image-width="768" data-image-height="461" src="images/Tieflader.jpg" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-        <div class="custom-expanded u-align-left u-container-style u-group u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
+        <div class="u-align-left u-container-style u-expanded-width-xs u-group u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
           <div class="u-container-layout u-container-layout-1">
             <img class="u-image u-image-contain u-image-default u-image-3" src="images/LOGO_Gold_ohneBerg.png" alt="" data-image-width="3508" data-image-height="2481">
             <h1 class="u-align-left u-text u-text-custom-color-1 u-text-1">anhänger<br>verkauf &amp;<br>Verleih
             </h1>
             <h2 class="u-align-left u-text u-text-custom-color-2 u-text-2"> WIR VERSETZEN BERGE FÜR SIE </h2>
-            <p class="u-align-left u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xs u-text-3"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/1201684-a5b6515c.png" alt=""></span> Hopfengasse 2 <br>&nbsp; &nbsp; &nbsp; 3072 Außerkasten
+            <p class="u-align-left u-text u-text-3"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/1201684-a5b6515c.png" alt=""></span> Hopfengasse 2 <br>&nbsp;3072 Kasten bei Böheimkirchen
             </p>
-            <p class="u-align-left u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xs u-text-4"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/8037609-99982c72.png" alt=""></span> &nbsp;+43 664 4249572
+            <p class="u-align-left u-text u-text-4"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/8037609-99982c72.png" alt=""></span> &nbsp;+43 664 4249572
             </p>
-            <p class="u-align-left u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xs u-text-5"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-3"><img src="images/8037609-99982c72.png" alt=""></span> &nbsp;+43 664 4249572
+            <p class="u-align-left u-text u-text-5"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-3"><img src="images/646135-381f602c.png" alt=""></span> &nbsp; &nbsp;office@brandis.solutions
             </p>
           </div>
         </div>
@@ -108,7 +108,7 @@ borders: top right bottom left !important
     <section class="u-clearfix u-white u-section-2" id="sec-4089">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-left u-expanded-width-xs u-grey-10 u-shape u-shape-1"></div>
-        <div class="custom-expanded u-align-left u-container-style u-group u-group-1">
+        <div class="u-align-left u-container-style u-expanded-width-xs u-group u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-1"> Komfortable Serienausstattung</h2>
             <p class="u-text u-text-2"> Bei Wörmann sind jede Menge „Extras“ inklusive. Hier finden Sie nicht lange Listen von Sonderausstattungen, denn eine umfangreiche Komfortausstattung ist in unseren Fahrzeugen Standard. Somit müssen Sie nicht lange auf Ihren Wunschanhänger warten, sondern können ihn direkt mitnehmen. Und das zu einem besonders interessanten Preis!</p>
@@ -246,9 +246,17 @@ borders: top right bottom left !important
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-75" id="sec-ec17"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1">
-          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>| <a href="datenschutz.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Datenschutzerklärung</a> | <a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
+        <p class="u-align-center u-text u-text-1">
+          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>|&nbsp;&nbsp;<a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
         </p>
+        <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
+          <a href="https://www.iubenda.com/privacy-policy/66901618" class="iubenda-black iubenda-embed iubenda-noiframe iubenda-noiframe" title="Datenschutzerklärung ">Datenschutzerklärung</a>
+          <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        </div>
+        <div class="custom-expanded u-clearfix u-custom-html u-custom-html-2">
+          <a href="https://www.iubenda.com/privacy-policy/66901618/cookie-policy" class="iubenda-black iubenda-embed iubenda-noiframe iubenda-noiframe" title="Cookie-Richtlinie ">Cookie-Richtlinie</a>
+          <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        </div>
       </div></footer>
   
 </body></html>
