--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html style="font-size: 16px;" lang="de"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Our Mission, The Future is Here, ​Architectural Design &amp;amp; Research, Architectural Agency, About Company, Our Team, ​Building Expertise">
-    <meta name="description" content="">
-    <title>Seite 3</title>
+    <meta name="keywords" content="Erdbau,Landschaftbau, Gabionen,">
+    <meta name="description" content="Wir versetzen Berge für Sie. ​Hangsicherung - Stützmauern - Bewehrte Erde - Gabionen">
+    <title>Brandis Solutions</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Startseite.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -22,12 +22,12 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site4",
+		"name": "Impressum",
 		"logo": "images/LOGO_Gold1.png"
 }</script>
     <meta name="theme-color" content="#b39858">
-    <meta property="og:title" content="Seite 3">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Brandis Solutions">
+    <meta property="og:description" content="Wir versetzen Berge für Sie. ​Hangsicherung - Stützmauern - Bewehrte Erde - Gabionen">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Startseite.html" data-home-page-title="Startseite" data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-transparent u-xl-mode" data-lang="de"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-ff38 u-header" id="sec-f4fc"><div class="u-clearfix u-sheet u-sheet-1">
@@ -92,11 +92,11 @@ borders: top right bottom left !important
           <div class="u-container-layout u-container-layout-1">
             <h1 class="u-align-left u-text u-text-custom-color-1 u-text-1">BRANDIS SOLUTIONS</h1>
             <h2 class="u-align-left u-text u-text-custom-color-2 u-text-2"> WIR VERSETZEN BERGE FÜR SIE </h2>
-            <p class="u-align-left u-text u-text-3"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/1201684-a5b6515c.png" alt=""></span>&nbsp;​Betrie​bsstrasse 54<br>&nbsp; &nbsp; &nbsp; 3071 Böheimkirchen
+            <p class="u-align-left u-text u-text-3"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/1201684-a5b6515c.png" alt=""></span> Hopfengasse 2 <br>&nbsp;3072 Kasten bei Böheimkirchen
             </p>
-            <p class="u-align-left u-text u-text-4"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/8037609-99982c72.png" alt=""></span> &nbsp;+43 664 4249572
+            <p class="u-align-left u-text u-text-4"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-2"><img src="images/646135-381f602c.png" alt=""></span> &nbsp; &nbsp;office@brandis.solutions
             </p>
-            <p class="u-align-left u-text u-text-5"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-3"><img src="images/646135-381f602c.png" alt=""></span> &nbsp; &nbsp;office@brandis.solutions
+            <p class="u-align-left u-text u-text-5"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-3"><img src="images/8037609-99982c72.png" alt=""></span> &nbsp;+43 664 4249572
             </p>
           </div>
         </div>
@@ -268,9 +268,17 @@ transparency: 0 !important; background-color: #3e3e42 !important
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-75" id="sec-ec17"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1">
-          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>| Datenschtuzerklärung | <a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
+        <p class="u-align-center u-text u-text-1">
+          <a href="Impressum.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Impressum </a>|&nbsp;&nbsp;<a href="files/Allgemeine-Geschaftsbedingungen-BrandisSolutionsGmbH.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">AGB</a>
         </p>
+        <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
+          <a href="https://www.iubenda.com/privacy-policy/66901618" class="iubenda-black iubenda-embed iubenda-noiframe iubenda-noiframe" title="Datenschutzerklärung ">Datenschutzerklärung</a>
+          <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        </div>
+        <div class="custom-expanded u-clearfix u-custom-html u-custom-html-2">
+          <a href="https://www.iubenda.com/privacy-policy/66901618/cookie-policy" class="iubenda-black iubenda-embed iubenda-noiframe iubenda-noiframe" title="Cookie-Richtlinie ">Cookie-Richtlinie</a>
+          <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        </div>
       </div></footer>
   
 </body></html>
